--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,12 @@
 name: Zomslaught
-version: 0.0.1
+version: 0.0.2
 main: com.SpectralVulpine.zomslaught.Zomslaught
+commands:
+  zomslaught:
+    description: Primary Zomslaught command. Type /zomslaught help for more details.
+    usage: /zomslaught [command]
+    permission: zomslaught.basic
+    permission-message: You do not have the power to control the Zomslaught...
+permissions:
+  zomslaught.admin:
+    default: op
