Make commands prettier
Also added permanight config option, in case servers do not want this
option on

Attempted to make a way for manual Fright Night overrides, but it didn't
work the way I thought. Will fix later

--- a/config.yml
+++ b/config.yml
@@ -7,3 +7,8 @@ frightTimer: 1200
 
 # frightDuration: The time in seconds each Fright Night should last. Defaults to 60.
 frightDuration: 60
+
+# ** Permanight **
+#
+# permanight: When set to true, the plugin will set the server to permanent nighttime on startup. Defaults to true.
+permanight: true
